@@ -12,13 +12,20 @@ let classify_pr what how pr =
   Placerun.set_pqueries pr
     (List.map (classify_pq what how) (Placerun.get_pqueries pr))
 
-(* classification types *)
+(* Classify a placement at a given location.
+ * Simply bounce up the tree until we hit an MRCA.
+ *)
 let classify_loc mrcam utm loc =
   let rec aux i =
     if IntMap.mem i mrcam then IntMap.find i mrcam
     else aux (IntMap.find i utm)
   in
-  try aux loc with | Not_found -> Tax_id.NoTax
+  (* Note below that we start by bumping up the map one level. Thus, if we are
+   * just distal to the MRCA of a clade, then we hit the MRCA on the nose. If
+   * the placement is just proximal of the MRCA, we go to the ancestor of the
+   * MRCA.
+   * *)
+  try aux (IntMap.find loc utm) with | Not_found -> Tax_id.NoTax
 
 let classify mrcam utm p =
   classify_loc mrcam utm (Placement.location p)
